# ModelChecker

./: .gitignore  .pylintrc  README.md  Readme.md  TODO.md  computational_point.md  debug_strategy.py  fix_all_theory_lib.py  flake.nix  installation.md  opencode.json  opencode.json.backup  output.json  output.md  pyproject.toml  pytest.ini  run_theory_tests.py  test_all_subtheories.py  test_all_theories.py  test_direct_loader.py  test_final.py  test_full_load.py  test_import_chain.py  test_import_fix.py  test_module_exec.py  test_operators.py  test_operators2.py  test_registry.py
Code/: .claude-code.json  .envrc  .gitignore  .pylintrc  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DOC_LIST.md  ITERATOR_DEBUG_SUMMARY.md  LICENCE  MAINTENANCE.md  MANIFEST.in  MAXIMIZE_OPTIMIZATION.md  N_workaround.py  README.md  STYLE_GUIDE.md  TESTS.md  analyze_false_premise.py  analyze_sk2_formula.py  analyze_strategies.py  baseline_example_results.json  baseline_results.json  cf_excl_mid.py  check_expectations.py  check_sk2_existentials.py  convert_syntax.py  crimson.py  crimson_cmodel.py  debug_cache_usage.py  debug_imposition.py  debug_output.txt  debug_simple.py  debug_sk2_constraints.py  debug_sk2_true_at.py  debug_skolem_mismatch.py  debug_skolem_usage.py  default.nix  definitions.py  dev_cli.py  (+118 more)
Code/.claude/: settings.local.json
Code/OLD/: definitions.py  print.py
Code/Prefix_Infix/: prefix_infix.py
Code/Test/: flake.nix  test.py
Code/Z3Test/: NOTES.md  cf_excl_mid.py  crimson.py  dancing.py  ent_1.py  ent_2.py  ent_3.py  ent_4.py  happy.py  kripke.py  parts.py  parts_part2.py  poss_strength.py  prop.py  simp_disj_ant.py  sort.py  test.py
Code/debug/: README.md  fix_jupyter_integration.py  simple_test.ipynb
Code/docs/: ARCHITECTURE.md  CLEANUP_RECOMMENDATIONS.md  DEBUG.md  DEVELOPMENT.md  EXAMPLES.md  IMPLEMENTATION.md  INSTALLATION.md  INTERACTIVE_SAVE.md  ITERATOR_CONTRACTS.md  LICENSE_INHERITANCE.md  README.md  STYLE_GUIDE.md  TESTS.md  TOOLS.md  UNIT_TESTS.md  WARNINGS_AND_FIXES.md
Code/docs/api/: README.md
Code/docs/contracts/: ITERATOR_CONTRACTS.md  README.md  THEORY_LICENSING.md
Code/docs/core/: ARCHITECTURE.md  CODE_STANDARDS.md  DOCUMENTATION.md  README.md  TESTING_GUIDE.md  TESTING_LEGACY.md.bak
Code/docs/development/: DEBUGGING_PROTOCOLS.md  ENVIRONMENT_SETUP.md  FEATURE_IMPLEMENTATION.md  PACKAGE_TESTING.md  PYPI_RELEASE_GUIDE.md  README.md  TESTING_FRAMEWORK_LEGACY.md.bak
Code/docs/guides/: README.md  project_creation.md
Code/docs/implementation/: ERROR_HANDLING.md  PERFORMANCE.md  README.md  REFACTORING.md
Code/docs/quality/: METRICS.md  README.md  REVIEW_CHECKLIST.md
Code/docs/research/: save-output-research.md
Code/docs/specific/: FORMULAS.md  ITERATOR.md  PACKAGES.md  README.md  UTILITIES.md
Code/docs/specs/: README.md
Code/docs/templates/: README.md  THEORY_TEMPLATE.py
Code/final_tests/: bimodal_3iter.txt  exclusion_3iter.txt  imposition_2iter.txt  logos_3iter.txt  logos_constitutive.txt  logos_counterfactual.txt  logos_extensional.txt  logos_modal.txt  logos_relevance.txt
Code/jupyter/: README_jupyter.md  jupyter_demo.ipynb
Code/maintenance/: ARCHITECTURAL_PATTERNS.md  AUDIENCE.md  CODE_ORGANIZATION.md  CODE_STANDARDS.md  DOCUMENTATION_STANDARDS.md  ERROR_HANDLING.md  EXAMPLES_STRUCTURE.md  FORMULA_FORMATTING.md  IMPLEMENT.md  MANUAL_TESTING.md  METHOD_COMPLEXITY.md  PERFORMANCE.md  PYPI_LINK_REQUIREMENTS.md  README.md  REFACTORING_METHODOLOGY.md  TESTING_STANDARDS.md  TEST_ORGANIZATION.md  TEST_STATUS.md  UNICODE_GUIDELINES.md  UTILITY_ORGANIZATION.md  VERSION_CONTROL.md
Code/maintenance/templates/: EXAMPLES_TEMPLATE.py  README_TEMPLATE.md  SUBTHEORY_README.md  TEST_TEMPLATE.py  THEORY_README.md
Code/old_test/: README.md  __init__.py  t_imposition.py
Code/scripts/: capture_baseline.py  capture_baseline_simple.py  capture_baseline_v2.py  capture_baselines.py  compare_baseline.sh  dual_test_refactoring.sh  test_refactoring.sh  test_type_hints.py
Code/src/model_checker/: CLAUDE.md  CLAUDE.md.bak  DEVELOPMENT.md  README.md  REFACTOR.md  REMAINING.md  REPORT.md  __init__.py  __main__.py  builder.py  champollion.py  class_operator_example.py  class_operator_playground.py  class_semantics_example.py  cli.py  (+18 more)
Code/test/: .pylintrc  README.md  old_ex.py  sat_tests.py  t_constitutive.py  t_modals.py  temp.py  test.py  test_champollion.py  test_constitutive.py  test_counterfactuals.py  test_examples.py  test_extensional.py  test_imposition.py  test_interaction.py  test_modals.py  test_relevance.py  test_sat.py  utils.py
Code/tests/: README.md  conftest.py  test_batch_output_integration.py  test_batch_output_real.py  test_model_building_sync.py  test_package.py
code/: .pylintrc  LICENSE  README.md  comparison.py  conftest.py  fix_output_tests.py  output.md  pyproject.toml  run_tests.py  run_update.py  scaling_benchmark.py  shell.nix  test_update.py
code/boneyard/: README.md
code/docs/: README.md
code/scripts/: README.md  capture_baseline_v2.py  check_type_coverage.py  compare_baseline.sh  compare_bimodal_baseline.sh  comparison.py  dual_test_refactoring.sh  final_validation.py  investigate_actual_formulas.py  investigate_nested_quantifiers.py  investigate_quantifier_issue.py  output.json  output.md  quantifier_benchmark.py  quantifier_output.json  test_cvc5_additional.py  test_cvc5_options.py  test_cvc5_options_focused.py  test_cvc5_post_task77.py  test_cvc5_stability.py  test_iterator_regression.py  test_refactoring.sh  test_type_hints.py  trace_formulas_direct.py  trace_model_checker.py  verify_solver_wiring.py
code/specs/: TODO.md  state.json
code/tests/: README.md  __init__.py  conftest.py
model_checker/: README.md  pyproject.toml  test_complete.py
model_checker/model_checker.egg-info/: PKG-INFO  SOURCES.txt
model_checker/package/: __init__.py  amalg.md  contra_with_neg.md  examples.py  model_definitions.py  model_structure.py  neg_unsat.md  nested_antecedent.md  nested_antecedent_4.md  semantics.py  strength_with_neg.md  syntax.py  test.py  test_2.py  test_complete.py  top_test.py  trans_with_neg.md
(+3544 files in other folders)
