[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-checker"
version = "0.8.19"
description = "A hyperintensional theorem prover for modal, counterfactual conditional, constitutive explanatory, and extensional operators."
authors = [
    { name = "Benjamin Brast-McKie", email = "benbrastmckie@gmail.com" },
    { name = "Miguel Buitrago", email = "mbuit82@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["semantics", "Z3", "logic", "counterfactuals", "modality", "model checker", "theorem prover", "hyperintensionality"]
dependencies = [
    "z3-solver",
]

[project.urls]
Homepage = "https://github.com/benbrastmckie/ModelChecker"
Issues = "https://github.com/benbrastmckie/ModelChecker/issues"

[project.scripts]
model-checker = "model_checker.__main__:run"
