[build-system]

requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-checker"
version = "0.8.28"
description = "A hyperintensional theorem prover for modal, counterfactual conditional, constitutive explanatory, and extensional operators."
authors = [
    { name = "Benjamin Brast-McKie", email = "benbrastmckie@gmail.com" },
    { name = "Miguel Buitrago", email = "mbuit82@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["semantics", "Z3", "logic", "counterfactuals", "modality", "model checker", "theorem prover", "hyperintensionality"]
dependencies = [
    "z3-solver",
    "ipywidgets",  # Optional: For interactive notebook components
    "matplotlib",  # Optional: For visualization
    "networkx",    # Optional: For graph representation
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/benbrastmckie/ModelChecker"
  Issues = "https://github.com/benbrastmckie/ModelChecker/issues"

[project.scripts]
model-checker = "model_checker.__main__:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["src/model_checker/theory_lib"]
python_files = "test_*.py"
python_classes = "Test*"
addopts = "--durations=0 -v --import-mode=importlib"
markers = [
    "countermodel: Tests that verify a countermodel exists",
    "theorem: Tests that verify a formula is a theorem",
    "performance: Tests that verify performance characteristics",
]
