[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bimodal-logic"
version = "0.1.0"
description = "Z3-based bimodal logic oracle: temporal and modal reasoning for the bimodal_harness."
authors = [
    { name = "Benjamin Brast-McKie", email = "benbrastmckie@gmail.com" },
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["bimodal logic", "temporal logic", "modal logic", "Z3", "SMT", "model checking", "oracle", "theorem prover"]
dependencies = [
    "z3-solver>=4.8.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/benbrastmckie/ModelChecker"
Issues = "https://github.com/benbrastmckie/ModelChecker/issues"

[project.scripts]
model-checker = "model_checker.__main__:run"
bimodal-logic = "bimodal_logic.cli:run"

[project.entry-points."bimodal_harness.oracle_providers"]
z3_base = "bimodal_logic.provider:Z3OracleProvider"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["README.md", "*.md", "*.ipynb"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["src/model_checker/theory_lib/bimodal/tests"]
python_files = "test_*.py"
python_classes = "Test*"
addopts = "--durations=0 -v --import-mode=importlib"
markers = [
    "countermodel: Tests that verify a countermodel exists",
    "theorem: Tests that verify a formula is a theorem",
    "performance: Tests that verify performance characteristics",
    "differential: Tests that compare MC oracle against reference oracles",
    "slow: Tests that are computationally expensive and skipped in CI",
]
filterwarnings = [
    # Ignore deprecation warning from z3's use of pkg_resources
    # This is a third-party library issue that will be fixed upstream
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning:z3.z3core",
    # Also ignore if it comes without specific module attribution
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
